Fixed the issue with incorrect grid display on Firefox

--- a/src/components/pokemonGrid.module.css
+++ b/src/components/pokemonGrid.module.css
@@ -1,9 +1,3 @@
-.pokemonGrid {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-}
-
 .header {
 	padding: 30px 0;
 	background-color: #cc0000;
